// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`H1 renders correctly with color prop 1`] = `
<h1
  className="sc-bwzfXH bKIQVW"
  color="red"
/>
`;

exports[`H1 renders correctly with floatLeft prop 1`] = `
<h1
  className="sc-bwzfXH karSZx"
/>
`;

exports[`H1 renders correctly with floatRight prop 1`] = `
<h1
  className="sc-bwzfXH kuiEMf"
/>
`;

exports[`H1 renders correctly with no props 1`] = `
<h1
  className="sc-bwzfXH buRMpD"
/>
`;

exports[`H1 renders correctly with size prop 1`] = `
<h1
  className="sc-bwzfXH cUamcU"
  size="31px"
/>
`;

exports[`H1 renders correctly with weight prop 1`] = `
<h1
  className="sc-bwzfXH dXNtPw"
/>
`;

exports[`H2 renders correctly with color prop 1`] = `
<h2
  className="sc-htpNat CciVl"
  color="red"
/>
`;

exports[`H2 renders correctly with floatLeft prop 1`] = `
<h2
  className="sc-htpNat dMHdLx"
/>
`;

exports[`H2 renders correctly with floatRight prop 1`] = `
<h2
  className="sc-htpNat cFMCKp"
/>
`;

exports[`H2 renders correctly with no props 1`] = `
<h2
  className="sc-htpNat eCWswd"
/>
`;

exports[`H2 renders correctly with size prop 1`] = `
<h2
  className="sc-htpNat gDRmkc"
  size="31px"
/>
`;

exports[`H2 renders correctly with weight prop 1`] = `
<h2
  className="sc-htpNat fppjev"
/>
`;

exports[`H3 renders correctly with color prop 1`] = `
<h3
  className="sc-bxivhb gCVibU"
  color="red"
/>
`;

exports[`H3 renders correctly with floatLeft prop 1`] = `
<h3
  className="sc-bxivhb hvZmhf"
/>
`;

exports[`H3 renders correctly with floatRight prop 1`] = `
<h3
  className="sc-bxivhb lgUQyo"
/>
`;

exports[`H3 renders correctly with no props 1`] = `
<h3
  className="sc-bxivhb jNAfjK"
/>
`;

exports[`H3 renders correctly with size prop 1`] = `
<h3
  className="sc-bxivhb nDKmy"
  size="31px"
/>
`;

exports[`H3 renders correctly with weight prop 1`] = `
<h3
  className="sc-bxivhb dRGpxY"
/>
`;

exports[`H4 renders correctly with color prop 1`] = `
<h4
  className="sc-ifAKCX saCdl"
  color="red"
/>
`;

exports[`H4 renders correctly with floatLeft prop 1`] = `
<h4
  className="sc-ifAKCX erCeFX"
/>
`;

exports[`H4 renders correctly with floatRight prop 1`] = `
<h4
  className="sc-ifAKCX ejvFcg"
/>
`;

exports[`H4 renders correctly with no props 1`] = `
<h4
  className="sc-ifAKCX bprrlF"
/>
`;

exports[`H4 renders correctly with size prop 1`] = `
<h4
  className="sc-ifAKCX karqEg"
  size="31px"
/>
`;

exports[`H4 renders correctly with weight prop 1`] = `
<h4
  className="sc-ifAKCX gYUcoq"
/>
`;

exports[`H5 renders correctly with clearLeft prop 1`] = `
<h5
  className="sc-EHOje cmeeNn"
/>
`;

exports[`H5 renders correctly with clearRight prop 1`] = `
<h5
  className="sc-EHOje gXBTpn"
/>
`;

exports[`H5 renders correctly with color prop 1`] = `
<h5
  className="sc-EHOje bbBYfV"
  color="red"
/>
`;

exports[`H5 renders correctly with floatLeft prop 1`] = `
<h5
  className="sc-EHOje gltaOo"
/>
`;

exports[`H5 renders correctly with floatRight prop 1`] = `
<h5
  className="sc-EHOje bRTip"
/>
`;

exports[`H5 renders correctly with no props 1`] = `
<h5
  className="sc-EHOje ctVFbK"
/>
`;

exports[`H5 renders correctly with size prop 1`] = `
<h5
  className="sc-EHOje hMbYZg"
  size="31px"
/>
`;

exports[`H5 renders correctly with weight prop 1`] = `
<h5
  className="sc-EHOje ctVFbK"
/>
`;

exports[`Label renders correctly with no props 1`] = `
<label
  className="sc-dnqmqq hFQHVS"
/>
`;

exports[`P1 renders correctly with no props 1`] = `
<p
  className="sc-bZQynM dESxzr"
/>
`;

exports[`P2 renders correctly with no props 1`] = `
<p
  className="sc-gzVnrw kFsvTA"
/>
`;

exports[`S1 renders correctly with no props 1`] = `
<span
  className="sc-htoDjs cfMUhB"
/>
`;
